[project]
name = "langrlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bborutenko", email = "borutenkobogdan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
