[project]
name = "langrlm"
version = "0.1.0"
description = "Recursive Language Models (RLM) inference engine built on LangChain"
readme = "README.md"
authors = [
    { name = "bborutenko", email = "borutenkobogdan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.10",
    "langchain-core>=0.3.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
